# rust-yew-notion-clone

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  tailwind.config.js
.cargo/: config.toml
src/: app.rs  main.rs
src/components/: bubble_menu.rs  bubble_menu_button.rs  editor.rs  editor_content.rs  floating_menu.rs  floating_menu_button.rs  mod.rs
src/js/: index.js
src/models/: selection.rs
src/shared/: js_commands.rs  mod.rs
src/shared/js/: commands.js
